# hep-rag

./: .gitignore  README.md  docker-compose.yml  environment.yml  plan.md  pyproject.toml
.github/workflows/: quality.yml
data/eval/: README.md  retrieval_queries.jsonl  review_notes.md
docker/vllm/reranker/: Dockerfile  server.py
src/hep_rag/: __init__.py
src/hep_rag/chunking/: __init__.py  chunker.py
src/hep_rag/embed/: __init__.py  build_embeddings.py  embed_query.py
src/hep_rag/eval/: __init__.py  metrics.py  models.py  report.py  retrieval_metrics.py  runner.py
src/hep_rag/ingest/: __init__.py  bibtex.py  build_chunks.py  latex_source.py  latex_text.py  living_review_categories.py  living_review_sources.py  schema.py  source_parser.py
src/hep_rag/qa/: __init__.py  ask.py
src/hep_rag/search/: __init__.py  common.py  config.py  documents.py  pgvector_search.py  postgres.py  retrieval.py
tests/: test_bibtex.py  test_chunker.py  test_embeddings.py  test_eval_retrieval_metrics.py  test_living_review_categories.py  test_pgvector_search.py  test_qa.py  test_search_common.py  test_source_parser.py
