[project]
name = "hep-rag-lab"
version = "0.1.0"
description = "Evaluated RAG experiments for high-energy physics papers."
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hep-rag-pg-load = "hep_rag.search.postgres:main"
hep-rag-ask = "hep_rag.qa.ask:main"
hep-rag-eval-retrieval = "hep_rag.eval.runner:main"

[project.optional-dependencies]
embeddings = [
  "numpy>=1.26",
]
dev = [
  "pytest>=8",
  "ruff>=0.12",
]
pgvector = [
  "numpy>=1.26",
  "psycopg[binary]>=3.2",
]
gpu = [
  "vllm>=0.8.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
